gallery img added and logo changed

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 	<!--[if IE 7]>
 <link rel="stylesheet" href="css/fontello-ie7.css"><![endif]-->
+	<link rel="shortcut icon" href="favicon.png" type="image/x-icon">
 
 	<link href="css/font.css" rel="stylesheet" type="text/css">
 	<link href="css/fontello.css" rel="stylesheet" type="text/css">
@@ -62,8 +63,9 @@
 					<div class="one-third column">
 						<!--Logo-->
 						<div class="logo">
-							<a href="#wrapper">
-								<h1>Thulir</h1>
+							<a href="index.html">
+								<!-- <h1>Thulir</h1> -->
+								<img width="90" src="images/logo.jpg" alt="logo">
 							</a>
 						</div>
 						<!--End logo-->
@@ -417,6 +419,35 @@
 						<div class="sixteen columns">
 							<h3 class="titleSmall">Awareness Campaigns & Workshops</h3>
 						</div>
+						<!--Container-->
+						<div class="container clearfix">
+
+							<div class="one-third column  item bottom4">
+								<a href="images/campaign1.png" class="folio">
+									<div class="desc">
+										<h3 class="projDesc">View Image</h3>
+									</div>
+									<img src="images/campaign1.png" alt="">
+								</a>
+							</div>
+							<div class="one-third column  item bottom4">
+								<a href="images/campaign2.png" class="folio">
+									<div class="desc">
+										<h3 class="projDesc">View Image</h3>
+									</div>
+									<img src="images/campaign2.png" alt="">
+								</a>
+							</div>
+							<div class="one-third column  item bottom4">
+								<a href="images/campaign3.png" class="folio">
+									<div class="desc">
+										<h3 class="projDesc">View Image</h3>
+									</div>
+									<img src="images/campaign3.png" alt="">
+								</a>
+							</div>
+						</div>
+						<!--End container-->
 						<div class="column list intro">
 							<ul>
 								<li>Signature Campaign against child marriage conducted for parents and PRI
@@ -588,28 +619,28 @@
 			<div class="container clearfix">
 
 				<div class="sixteen columns">
-					<h1 class="titleBig">portfolio</h1>
+					<h1 class="titleBig">gallery</h1>
 				</div>
 
 				<!--Container-->
 				<div class="container clearfix">
 					<div class="two-thirds column bottom4 item">
-						<a href="project.html">
+						<a href="images/image2.png" class="folio">
 							<div class="desc">
-								<h3 class="projDesc">Project Name <span>&#8213; external &#8213;</span></h3>
+								<h3 class="projDesc">View Image</h3>
 
 							</div>
-							<img src="images/portfolioImages/w1.jpg" alt="">
+							<img src="images/image2.png" alt="">
 						</a>
 
 					</div>
 
 					<div class="one-third column  item bottom4">
-						<a href="images/portfolioImages/wb3.jpg" class="folio">
+						<a href="images/image1.png" class="folio">
 							<div class="desc">
-								<h3 class="projDesc">Project Name <span>&#8213; logo identity &#8213;</span></h3>
+								<h3 class="projDesc">View Image</h3>
 							</div>
-							<img src="images/portfolioImages/w3.jpg" alt="">
+							<img src="images/image1.png" alt="">
 						</a>
 
 					</div>
@@ -622,33 +653,62 @@
 				<div class="container clearfix">
 
 					<div class="one-third column  item bottom4">
-						<a href="images/portfolioImages/wb2.jpg" class="folio">
+						<a href="images/image11.png" class="folio">
 							<div class="desc">
-								<h3 class="projDesc">Project Name <span>&#8213; graphic design &#8213;</span></h3>
+								<h3 class="projDesc">View Image</h3>
 							</div>
-							<img src="images/portfolioImages/w2.jpg" alt="">
+							<img src="images/image11.png" alt="">
 						</a>
 
 					</div>
 
 					<div class="one-third column  item bottom4">
-						<a href="project.html">
+						<a href="images/image7.png" class="folio">
 							<div class="desc">
-								<h3 class="projDesc">Project Name <span>&#8213; external &#8213;</span></h3>
+								<h3 class="projDesc">View Image</h3>
 							</div>
-							<img src="images/portfolioImages/w4.jpg" alt="">
+							<img src="images/image7.png" alt="">
 						</a>
 
 					</div>
 
 					<div class="one-third column  item bottom4">
-						<a href="images/portfolioImages/wb5.jpg" class="folio">
+						<a href="images/image5.png" class="folio">
 							<div class="desc">
-								<h3 class="projDesc">Project Name <span>&#8213; Motion &#8213;</span></h3>
+								<h3 class="projDesc">View Image</h3>
 							</div>
-							<img src="images/portfolioImages/w5.jpg" alt="">
+							<img src="images/image5.png" alt="">
 						</a>
 
+					</div>
+				</div>
+				<!--End container-->
+				<!--Container-->
+				<div class="container clearfix">
+
+					<div class="one-third column  item bottom4">
+						<a href="images/image3.png" class="folio">
+							<div class="desc">
+								<h3 class="projDesc">View Image</h3>
+							</div>
+							<img src="images/image3.png" alt="">
+						</a>
+					</div>
+					<div class="one-third column  item bottom4">
+						<a href="images/image10.png" class="folio">
+							<div class="desc">
+								<h3 class="projDesc">View Image</h3>
+							</div>
+							<img src="images/image10.png" alt="">
+						</a>
+					</div>
+					<div class="one-third column  item bottom4">
+						<a href="images/image4.png" class="folio">
+							<div class="desc">
+								<h3 class="projDesc">View Image</h3>
+							</div>
+							<img src="images/image4.png" alt="">
+						</a>
 					</div>
 				</div>
 				<!--End container-->
@@ -658,23 +718,30 @@
 				<div class="container clearfix">
 
 					<div class="one-third column  bottom5 item">
-						<a href="images/portfolioImages/w6.jpg" class="folio">
+						<a href="images/image6.png" class="folio">
 							<div class="desc">
-								<h3 class="projDesc">Project Name <span>&#8213; website &#8213;</span></h3>
+								<h3 class="projDesc">View Image</span></h3>
 							</div>
-							<img src="images/portfolioImages/w6.jpg" alt="">
+							<img src="images/image6.png" alt="">
 						</a>
 
 					</div>
-
-					<div class="two-thirds column  bottom5 item">
-						<a href="images/portfolioImages/w7.jpg" class="folio">
+					<div class="one-third column  bottom5 item">
+						<a href="images/image9.png" class="folio">
 							<div class="desc">
-								<h3 class="projDesc">Project Name <span>&#8213; branding &#8213;</span></h3>
+								<h3 class="projDesc">View Image</span></h3>
 							</div>
-							<img src="images/portfolioImages/w7.jpg" alt="">
+							<img src="images/image9.png" alt="">
 						</a>
 
+					</div>
+					<div class="one-third column  bottom5 item">
+						<a href="images/image8.png" class="folio">
+							<div class="desc">
+								<h3 class="projDesc">View Image</span></h3>
+							</div>
+							<img src="images/image8.png" alt="">
+						</a>
 					</div>
 				</div>
 				<!--End container-->
