--- a/index.html
+++ b/index.html
@@ -4,16 +4,31 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-	<title>Thulir</title>
+
+	<!-- Primary Meta Tags -->
+	<title>Thulir - Tiruvallur District Administration</title>
+	<meta name="title" content="Thulir - Tiruvallur District Administration">
 	<meta name="description"
 		content="Thulir, an initiative of the Tiruvallur District Administration is dedicated to ending child marriage. ">
-
-	<!--Stylesheet-->
-
-	<!--[if IE 7]>
-<link rel="stylesheet" href="css/fontello-ie7.css"><![endif]-->
 	<link rel="shortcut icon" href="favicon.png" type="image/x-icon">
 
+	<!-- Open Graph / Facebook -->
+	<meta property="og:type" content="website">
+	<meta property="og:url" content="https://abishekmahi.github.io/thulir/">
+	<meta property="og:title" content="Thulir - Tiruvallur District Administration">
+	<meta property="og:description"
+		content="Thulir, an initiative of the Tiruvallur District Administration is dedicated to ending child marriage. ">
+	<meta property="og:image" content="https://abishekmahi.github.io/thulir/images/logo.jpg">
+
+	<!-- Twitter -->
+	<meta property="twitter:card" content="summary_large_image">
+	<meta property="twitter:url" content="https://abishekmahi.github.io/thulir/">
+	<meta property="twitter:title" content="Thulir - Tiruvallur District Administration">
+	<meta property="twitter:description"
+		content="Thulir, an initiative of the Tiruvallur District Administration is dedicated to ending child marriage. ">
+	<meta property="twitter:image" content="https://abishekmahi.github.io/thulir/images/logo.jpg">
+
+	<!--Stylesheet-->
 	<link href="css/font.css" rel="stylesheet" type="text/css">
 	<link href="css/fontello.css" rel="stylesheet" type="text/css">
 	<link href="css/base.css" rel="stylesheet" type="text/css">
